Align buttons correctly in configure

--- a/static/configure.css
+++ b/static/configure.css
@@ -26,6 +26,7 @@ html {
 .btn-container {
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 }
 .btn-group .button {
     border: 1px solid white;
@@ -85,14 +86,14 @@ html {
     margin-right: auto;
 }
 
-config-submit {
+.config-submit input {
+    display: block;
     color: white;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
 
 table {
+    color: white;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
